test/types/string/bradc/substring/substringBadRange.good
substringBadRange.chpl:3: error: string index out of bounds
