test/types/string/bradc/substring/substringBadRange.chpl
var str = "abcdefghijklm";

writeln("str.substring(13..14) = ", str.substring(13..14));
writeln("str.substring(13..16) = ", str.substring(13..16));
